[gd_scene load_steps=15 format=2]

[ext_resource path="res://Theme/kenneyUI.tres" type="Theme" id=1]
[ext_resource path="res://Theme/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu/bootsplash.png" type="Texture" id=3]
[ext_resource path="res://MainMenu/LmaoDead.gd" type="Script" id=4]
[ext_resource path="res://MainMenu/nice_going_idiot_u_made_mc_sad.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Buttons:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="LmaoDead" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 640, 320 )
scale = Vector2( 4, 4 )
frames = SubResource( 11 )
frame = 3
playing = true

[node name="Title" type="Label" parent="."]
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )
text = "You Have no Confidence!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 32.0
margin_top = 512.0
margin_right = 1253.0
margin_bottom = 608.0

[node name="Main Menu" type="Button" parent="HBoxContainer"]
margin_right = 461.324
margin_bottom = 96.251
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Main menu"

[node name="Try Again" type="Button" parent="HBoxContainer"]
margin_left = 465.0
margin_right = 894.324
margin_bottom = 96.251
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Try Again"

[node name="Quit" type="Button" parent="HBoxContainer"]
pause_mode = 2
margin_left = 898.0
margin_right = 1221.32
margin_bottom = 96.251
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Give Up"

[node name="Fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="FadeAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../Fade")
anims/Fade = SubResource( 4 )
anims/FadeOut = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="pressed" from="HBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Try Again" to="." method="_on_Try_Again_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
